--- a/gateway_service/src/main/resources/application.properties
+++ b/gateway_service/src/main/resources/application.properties
@@ -1,13 +1,4 @@
-spring.cloud.config.enabled=true
-spring.cloud.discovery.enabled=true
-
-server.port=8888
-
-
 spring.application.name=gateway-service
+server.port=8888
+spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
 
-eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.config.import=optional:configserver:http://localhost:9999
-
-management.endpoints.web.exposure.include=*
