--- a/produit_service/src/main/resources/application.properties
+++ b/produit_service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=produit-service
 server.port=8080
-spring.config.import=optional:configserver:http://localhost:9999
-
+spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
 
