--- a/produit_service/src/main/resources/application.properties
+++ b/produit_service/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=produit-service
 server.port=8080
 spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
 
+spring.main.allow-bean-definition-overriding=true
